# project_booking

./: .gitignore  .travis.yml  LICENSE  README.md  THIRD_PATRY_LICENSE
project_booking_backend/: Cargo.toml
project_booking_backend/formaters/: Cargo.toml
project_booking_backend/formaters/src/: lib.rs
project_booking_backend/identifiers/: Cargo.toml
project_booking_backend/identifiers/src/: lib.rs
project_booking_backend/logger/: Cargo.toml
project_booking_backend/logger/src/: lib.rs
project_booking_backend/report/: Cargo.toml
project_booking_backend/report/src/: lib.rs
project_booking_backend/search/: Cargo.toml
project_booking_backend/search/src/: lib.rs
project_booking_backend/src/: lib.rs  test_set.rs
project_booking_backend/task/: Cargo.toml
project_booking_backend/task/src/: lib.rs
project_booking_backend/todo/: Cargo.toml
project_booking_backend/todo/src/: lib.rs  test_set.rs
project_booking_backend_gui_interface/: Cargo.toml
project_booking_backend_gui_interface/src/: main.rs
project_booking_cli/: Cargo.toml
project_booking_cli/src/: main.rs
project_booking_gui/: main.cpp  project_booking_gui.pro  projectbooking_gui.cpp  projectbooking_gui.h  projectbooking_gui.ui
project_booking_gui/project_booking_qt_gui/: backendhandler.cpp  backendhandler.h
project_booking_qt_gui/ProjectBooking/: ProjectBooking.pro
project_booking_qt_gui/ProjectBookingQtUI/ProjectBookingQtUI/: ProjectBookingQtUI.pro  addtimeform.cpp  addtimeform.h  backendhandler.cpp  backendhandler.h  err.h  helpform.cpp  helpform.h  jsonparser.cpp  jsonparser.h  (+23 more)
(+2 files in other folders)
