[package]
name = "project_booking_backend"
version = "0.2.2"
authors = ["Viorel Bota <botaviorel@gmail.com>"]

[dependencies]
todo = { path = "todo" }
logger = { path = "logger" }
formaters = { path = "formaters" }
report = { path = "report" }
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"