[package]
name = "project_booking_backend_gui_interface"
version = "0.1.0"
authors = ["Viorel Bota <botaviorel@gmail.com>"]

[dependencies]
project_booking_backend = { path = "../project_booking_backend" }
logger = { path = "../project_booking_backend/logger" }
todo = { path = "../project_booking_backend/todo" }
formaters = { path = "../project_booking_backend/formaters" }