[package]
name = "project_booking_cli"
version = "0.1.3"
authors = ["Viorel Bota <botaviorel@gmail.com>"]

[dependencies]
project_booking_backend = { path = "../project_booking_backend" }
todo = { path = "../project_booking_backend/todo" }
logger = { path = "../project_booking_backend/logger" }
formaters = { path = "../project_booking_backend/formaters" }
